adjusted article spacing, fixed Read More button

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -238,11 +238,11 @@ article h3 {
 article p {
 	line-height: 1.6;
 	color: #555;
-	margin-bottom: 30px;
+	margin-bottom: 5px;
 }
 
 article {
-	margin-bottom: 80px;
+	margin-bottom: 20px;
 }
 
 article ul {
@@ -284,6 +284,7 @@ article .readmore {
 	margin:30px 0;
 	padding:5px 10px;
 	text-decoration: none;
+	color: black;
 }
 code, tt {
 	padding: 1px 3px;
